# helios-fusion-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  pages.yml  paper.yml  publish.yml
docs/: architecture.md  baselines.md  index.md  training.md
docs/api/: index.md
docs/stylesheets/: extra.css
notebooks/: 01-synthetic-bma-demo.ipynb  02-train-on-table-3-1.ipynb
paper/: .gitignore  COVER_LETTER.md  SUBMISSION_CHECKLIST.md  main.bbl  main.tex  refs.bib
paper/figures/: architecture.mmd  build_architecture.py  build_gannon_bz_timeline.py  build_placeholder_results.py
paper/tables/: table-3-1.tex
src/helios_fusion/: __init__.py  stratification.py  types.py
src/helios_fusion/bma/: __init__.py  orchestrator.py  weights.py
src/helios_fusion/calibration/: __init__.py  isotonic.py  platt.py  stratified.py
src/helios_fusion/conformal/: __init__.py  mondrian.py  split.py
src/helios_fusion/eval/: __init__.py  baseline.py  harness.py  metrics.py
src/helios_fusion/training/: __init__.py  fit_bma.py  fit_conformal.py  fit_isotonic.py  load_table_3_1.py  pipeline.py  swpc_sep_archive.py
tests/: conftest.py  test_bma.py  test_calibration.py  test_conformal.py  test_eval_harness.py  test_metrics.py  test_smoke.py  test_stratification.py  test_types.py
tests/fixtures/swpc_archive/: seps_full_2026-05-17.html  seps_trimmed_v2.html
tests/training/: test_fit_bma.py  test_fit_conformal.py  test_fit_isotonic.py  test_load_real_data_paths.py  test_load_table_3_1.py  test_pipeline.py  test_swpc_sep_archive.py  test_v2_helpers.py
