[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "helios-fusion-engine"
description = "Model-agnostic probabilistic fusion of heterogeneous space-weather model outputs: Bayesian Model Averaging orchestrator, isotonic-regression reliability calibrator, split + Mondrian conformal prediction wrappers, and severity-stratified validation harness with CCMC-compatible metrics (HSS, TSS, POD, FAR, Brier, CRPS). Framework only; trained weights/configs live in the private helios-fusion-internal companion repo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Thomas Waweru", email = "t.waweru@577industries.com" },
    { name = "577 Industries Inc.", email = "engineering@577industries.com" },
]
keywords = ["heliophysics", "space-weather", "ml", "provenance", "fusion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "scikit-learn>=1.4,<2.0",
    "joblib>=1.3",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
eval = [
    "matplotlib>=3.8",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
    "detect-secrets>=1.5",
    "matplotlib>=3.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/577Industries/helios-fusion-engine"
Repository = "https://github.com/577Industries/helios-fusion-engine.git"
Issues = "https://github.com/577Industries/helios-fusion-engine/issues"
Documentation = "https://577industries.github.io/helios-fusion-engine"

[tool.hatch.version]
path = "src/helios_fusion/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/helios_fusion"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ARG", # unused arguments
    "PTH", # use pathlib
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "B", "SIM"]
"notebooks/**/*" = ["ARG", "B", "F", "E", "RUF001"]
"paper/figures/**/*" = ["RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=helios_fusion --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/helios_fusion"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
